# cherry_picker

./: .env.template  .gitignore  CONTRIBUTING.md  LICENCE  README.md  main.py  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: lint_files.yaml  run_tests.yaml  test_and_lint.yaml
src/configs/: custom_types.py  printer.py  settings.py
src/configs/clouds/: gdrive_client.py
src/configs/notifications/: create_message.py  pushover.py
src/files/: course_list.py  courses.json
src/scraper/: authenticate_user.py  download_files.py  setup_scraper.py  site_scraper.py  tracker.py
tests/configs/: test_printer.py
tests/configs/notifications/: test_create_message.py  test_pushover.py
tests/scraper/: test_download_files.py  test_site_scraper.py  test_tracker.py
