[project]
name = "CherryPicker"
version = "0.1.0"
description = "A automated companion for harvesting university course materials with precision and speed"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "selenium>=4.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
